--- a/public/css/app.css
+++ b/public/css/app.css
@@ -162,10 +162,15 @@ body{
   background: #002c69;
 }
 
+.profile a{
+  text-decoration: none;
+}
+
 .profile_content .profile .profile_details{
   display: flex;
   align-items: center;
   white-space: nowrap;
+  color: #fff;
 }
 
 .profile .profile_details img{
