Implementacion de vistas para chat y perfil del usuario

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -162,6 +162,11 @@ body{
   background: #002c69;
 }
 
+.profile a{
+  color: #fff;
+  text-decoration: none;
+}
+
 .profile_content .profile .profile_details{
   display: flex;
   align-items: center;
