--- a/public/css/Groups/style_groups.css
+++ b/public/css/Groups/style_groups.css
@@ -1,16 +1,15 @@
 .teams-section{
-    position: absolute;
-    width: 100%;
+    position: relative;
+    width: calc(100% - 16vw);
     height: 100%;
     left: 16vw;
     display: block;
 }
 
 .teams-section .group-banner{
-    position: absolute;
+    position: relative;
     display: flex;
     width: 100%;
-    height: 9vh;
     padding: 10px 15px;
     text-align: left;
     align-items: center;
@@ -20,10 +19,11 @@
 }
 
 .teams-section .group-banner .banner-text{
-    width: 70%;
+    width: 89%;
     font-size: 25px;
     font-family: 'Open Sans';
     color: #fff;
+    pointer-events: none;
 }
 
 .teams-section .create-group a{
@@ -31,9 +31,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    left: 4vw;
-    width: 4vw;
-    height: 5vh;
     padding: 7px 5px;
     font-size: 20px;
     font-weight: 600;
@@ -65,10 +62,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    left: 78vw;
-    height: 5vh;
-    width: 3vw;
-    padding: 5px;
+    left: 95%;
+    padding: 1vh;
     font-size: 20px;
     font-weight: 600;
     color: #fff;
@@ -83,13 +78,10 @@
 }
 
 .teams-section .personal-groups{
-    position: absolute;
-    display: flex;
+    position: relative;
     width: 100%;
-    height: 5%;
-    top: 9vh;
-    left: 1vw;
-    padding: 0.5%;
+    padding: 1vh 1vw;
+    pointer-events: none;
 }
 
 .teams-section .personal-groups .personal-groupsT{
@@ -107,14 +99,12 @@
 
 .teams-section .group-boxes{
     position: relative;
-    display: grid;
+    display: flex;
+    justify-content: center;
     overflow-y: auto;
-    top: 12vh;
-    height: 100%;
+    white-space: nowrap;
+    height: auto;
     width: 100%;
-    padding: 10px 10px;
-    grid-template-columns: 17% 17% 17% 17% 17%;
-    grid-template-rows: 40% 40%;
 }
 
 .group-boxes a{
@@ -122,7 +112,7 @@
 }
 
 .teams-section .group-boxes .team{
-    margin: 5px 7px 5px 7px;
+    margin: 2vh 1vw;
     border-radius: 5px;
     border: 1px solid #142c4d;
     cursor: pointer;
@@ -130,8 +120,6 @@
 }
 
 .teams-section .team-image{
-    height: 70%;
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -139,8 +127,9 @@
 }
 
 .teams-section .team-image img{
-    width: 80%;
-    height: 80%;
+    width: 20vh;
+    height: 20vh;
+    object-fit: cover;
     border-radius: 50%;
     border: 1px solid #142c4d;
     background: #fff;
