--- a/public/css/style_messages.css
+++ b/public/css/style_messages.css
@@ -198,7 +198,7 @@
 
 .text-box input{
     position: relative;
-    width: 52vw;
+    width: 100%;
     height: 100%;
     padding-left: 15px;
     border-radius: 5px;
