--- a/public/css/style_messages.css
+++ b/public/css/style_messages.css
@@ -188,6 +188,7 @@
 }
 
 .text-box{
+    display: flex;
     padding: 2vh 10vh;
     position: relative;
     height: 9.2vh;
@@ -198,7 +199,7 @@
 
 .text-box input{
     position: relative;
-    width: 100%;
+    width: 52vw;
     height: 100%;
     padding-left: 15px;
     border-radius: 5px;
@@ -206,6 +207,10 @@
     font-family: sans-serif;
     color: #3b3b3b;
     border: 1px solid #969696;
+}
+
+.text-box i{
+    padding: 1vh 1vw;
 }
 
 .chat-area input[type="text"]:focus{
