--- a/public/css/Groups/style_groups.css
+++ b/public/css/Groups/style_groups.css
@@ -170,3 +170,35 @@
     width: calc(100% - 17.68%);
     left: 240px;
 }
+
+/* responsive design for home groups */
+@media(max-width: 600px){
+    .teams-section{
+        left: 109px;
+        width: calc(100% - 109px);
+    }
+
+    .create-group a{
+        position: absolute;
+        left: 68%;
+    }
+
+    .teams-section .notification{
+        position: relative;
+        left: 42vw;
+        top: 0;
+    }
+
+    .team{
+        width: auto;
+    }
+
+    .team .team-image{
+        display: flex;
+        justify-content: center;
+    }
+
+    .team .team-info{
+        font-size: 14px;
+    }
+}
